<resources>
    <string name="app_name">Lotto Simulator</string>
    <string name="win_number">당첨 번호</string>
    <string name="my_number">내가 입력한 번호</string>
    <string name="buy_one_lotto">로또 한 장 구매하기</string>
    <string name="buy_auto_lotto">로또 자동으로 계속 구매하기</string>
    <string name="use_money">사용 금액: </string>
    <string name="win_money">당첨 금액: </string>
    <string name="first_rank">1등: </string>
    <string name="second_rank">2등: </string>
    <string name="third_rank">3등: </string>
    <string name="fourth_rank">4등: </string>
    <string name="fifth_rank">5등: </string>
    <string name="unranked">꽝: </string>
    <string name="pause_auto_buying">자동 구매 중단하기</string>
    <string name="resume_auto_buying">자동 구매 재개하기</string>
</resources>
