<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        tools:context=".MainActivity">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/win_number"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/winNumTxt01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\?"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/winNumTxt02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\?"
                android:layout_marginLeft="10dp"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/winNumTxt03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\?"
                android:layout_marginLeft="10dp"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/winNumTxt04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\?"
                android:layout_marginLeft="10dp"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/winNumTxt05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\?"
                android:layout_marginLeft="10dp"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/winNumTxt06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\?"
                android:layout_marginLeft="10dp"
                android:textSize="24sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:layout_marginLeft="10dp"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/bonusNumTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\?"
                android:layout_marginLeft="10dp"
                android:textSize="24sp"/>
        </LinearLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_number"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/myNumTxt01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/myNumTxt02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12"
                android:layout_marginLeft="10dp"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/myNumTxt03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="24"
                android:layout_marginLeft="10dp"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/myNumTxt04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="36"
                android:layout_marginLeft="10dp"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/myNumTxt05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="42"
                android:layout_marginLeft="10dp"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/myNumTxt06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="49"
                android:layout_marginLeft="10dp"
                android:textSize="24sp"/>
        </LinearLayout>
        <Button
            android:id="@+id/buyOneLottoBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/buy_one_lotto"/>
        <Button
            android:id="@+id/buyAutoLottoBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/buy_auto_lotto"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_money"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/useMoneyTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0원"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/win_money"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/winMoneyTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0원"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_rank"/>
                <TextView
                    android:id="@+id/firstRankTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="n회"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10sp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second_rank"/>
                <TextView
                    android:id="@+id/secondRankTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="n회"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10sp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/third_rank"/>
                <TextView
                    android:id="@+id/thirdRankTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="n회"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10sp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fourth_rank"/>
                <TextView
                    android:id="@+id/fourthRankTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="n회"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10sp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fifth_rank"/>
                <TextView
                    android:id="@+id/fifthRankTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="n회"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unranked"/>
                <TextView
                    android:id="@+id/unrankedTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="n회"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>